k8s_manifests/testapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: testapp.dev
      http:
        paths:
          - path: /frontend
            pathType: Exact
            backend:
              service:
                name: frontend-app-service
                port:
                  number: 3000
          - path: /backend
            pathType: Exact
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
